--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -1,14 +1,16 @@
 {% extends 'index.html' %}
-
+{% block title %}Войти{% endblock %}
 {% block 'content' %}
     <div class="section">
         <div class="container">
                 <div class="row">
-
+                    <div class="col-sm-6 col-sm-offset-1 social-login">
+							<p class="text-center" style="padding-left:70px">Для входа в систему, заполните форму.</p>
+                    </div>
 				</div>
             <div class="row">
-                <div class="col-sm-6 col-sm-offset-1 social-login">
-							<p class="text-center">Для входа в систему, заполните форму.</p>
+                <div class="col-sm-1 col-sm-offset-1 social-login">
+
                 </div>
                 <div class="col-sm-5" >
                     <div class="basic-login">
