--- a/account/templates/register.html
+++ b/account/templates/register.html
@@ -1,13 +1,15 @@
 {% extends 'index.html' %}
+{% block title %}Регистрация{% endblock %}
 {% block 'content' %}
     <div class="section">
 	    	<div class="container">
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-1 social-login">
-							<p class="text-center">Для регистрации на сайте, заполните форму.</p>
+							<p class="text-center" style="padding-left:70px">Для регистрации, заполните форму.</p>
 					</div>
 				</div>
 				<div class="row">
+					<div class="col-sm-1 col-sm-offset-1 social-login"></div>
 						<div class="col-sm-5" >
 							<div class="basic-login">
 								<form role="form" method="post" action="">
