--- a/indicators/templates/indicators.html
+++ b/indicators/templates/indicators.html
@@ -3,27 +3,38 @@
 
 {% block 'content' %}
             <div class="section">
-	        <div class="container">
-	        	<div class="row">
-                    <form action="{% url 'selected_indicator' %}" method="post">
-                    {% if indicators %}
-                        {% for indicator in indicators %}
-                            <div class="col-md-4 col-sm-6">
-                                <div class="service-wrapper">
-                                    <img src="{% static 'img/service-icon/diamond.png' %}" alt="Service Name">
-                                    <h3>{{ indicator.name }}</h3>
-<!--                                    <p>Praesent rhoncus mauris ac sollicitudin vehicula. Nam fringilla turpis turpis, at posuere turpis aliquet sit amet condimentum</p>-->
-<!--                                    <a href="#" class="btn">Read more</a>-->
-                                        {{ choose_degree_form }}
-                                        {% csrf_token %}
-
+                <div class="container">
+                    <div class="row">
+                        {% if indicators %}
+                            {% for indicator in indicators %}
+                                <div class="col-md-4 col-sm-6">
+                                    <div class="service-wrapper">
+                                        <img src="{% static 'img/service-icon/diamond.png' %}" alt="Service Name">
+                                        <h3>{{ indicator.name }}</h3>
+    <!--                                    <p>Praesent rhoncus mauris ac sollicitudin vehicula. Nam fringilla turpis turpis, at posuere turpis aliquet sit amet condimentum</p>-->
+    <!--                                    <a href="#" class="btn">Read more</a>-->
+                                            {% if indicator.id in set_id %}
+                                                <a href="{% url 'set:change_set' indicator.id %}" class="btn">Удалить</a>
+                                            {% else %}
+                                                <a href="{% url 'set:change_set' indicator.id %}" class="btn">Выбрать</a>
+                                            {% endif %}
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                    <div class="section section">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="calltoaction-wrapper">
+                                        <h3>Перейти к опросным листам </h3> <a href="{% url 'set:set_detail' %}" class="btn btn-orange">Рассчитать</a>
+                                    </div>
                                 </div>
                             </div>
-                        {% endfor %}
-                    {% endif %}
-                    <input type="submit" class="add_to_cart" value="Следующий шаг">
-                    </form>
-	        	</div>
+                        </div>
+                    </div>
+                </div>
+
 	        </div>
-	    </div>
 {% endblock %}
