--- a/indicators/templates/main.html
+++ b/indicators/templates/main.html
@@ -1,5 +1,7 @@
 {% extends 'index.html' %}
 {% load static %}
+
+{% block title %}Главная{% endblock %}
 {% block 'content' %}
         <!-- Homepage Slider -->
         <div class="homepage-slider">
@@ -8,31 +10,31 @@
 					<!-- Slide 1 -->
 					<li class="bg4">
 						<!-- Slide Title -->
-						<h2 class="title">Responsive</h2>
+						<h2 class="title">Сервис по оценке уровня цифровизации</h2>
 						<!-- Slide Text -->
-						<h3 class="subtitle">It looks great on desktops, laptops, tablets and smartphones</h3>
+						<h3 class="subtitle">Измерение на основе совокупности частных показателей автоматизации и информатизации</h3>
 						<!-- Slide Image -->
-						<img class="slide-img" src="{% static 'img/homepage-slider/slide1.png' %}" alt="Slide 1" />
+<!--						<img class="slide-img" src="{% static 'img/homepage-slider/slide1.jpg' %}" alt="Slide 1" />-->
 					</li>
 					<!-- End Slide 1 -->
 					<!-- Slide 2 -->
 					<li class="bg3">
 						<!-- Slide Title -->
-						<h2 class="title">Color Schemes</h2>
+						<h2 class="title">Сервис по оценке уровня цифровизации</h2>
 						<!-- Slide Text -->
-						<h3 class="subtitle">Comes with 5 color schemes and it's easy to make your own!</h3>
+						<h3 class="subtitle">Методика разработана с учетом специфики деятельности организаций (предприятиЙ) функциональных сфер Республики Беларусь</h3>
 						<!-- Slide Image -->
-						<img class="slide-img" src="{% static 'img/homepage-slider/slide2.png' %}" alt="Slide 2" />
+<!--						<img class="slide-img" src="{% static 'img/homepage-slider/slide2.jpg' %}" alt="Slide 2" />-->
 					</li>
 					<!-- End Slide 2 -->
 					<!-- Slide 3 -->
 					<li class="bg1">
 						<!-- Slide Title -->
-						<h2 class="title">Feature Rich</h2>
+						<h2 class="title">Сервис по оценке уровня цифровизации</h2>
 						<!-- Slide Text -->
-						<h3 class="subtitle">Huge amount of components and over 30 sample pages!</h3>
+						<h3 class="subtitle">Расчет с учетом существующей структуры организации(предприятия) без изменения перечня бизнес-процессов и связей между ними</h3>
 						<!-- Slide Image -->
-						<img class="slide-img" src="{% static 'img/homepage-slider/slide3.png' %}" alt="Slide 3" />
+<!--						<img class="slide-img" src="{% static 'img/homepage-slider/slide3.jpg' %}" alt="Slide 3" />-->
 					</li>
 					<!-- End Slide 3 -->
 				</ul>
@@ -50,29 +52,16 @@
 		<!-- Press Coverage -->
         <div class="section">
 	    	<div class="container">
+				<h2>Что мы понимаем под цифровизацией?</h2>
 				<div class="row">
+
 					<div class="col-md-12 col-sm-6">
-						<p class="">
-							    Цифровизация – современный тренд развития и последовательного улучшения всех бизнес-процессов
+	        			<div class="service-wrapper">
+		        			<p><h3>Цифровизация – современный тренд развития и последовательного улучшения всех бизнес-процессов
 							экономики и связанных с ней социальных сфер, основанный на увеличении скорости взаимообмена, доступности
-							и защищенности информации, а также на возрастании роли автоматизации как базы цифровизации.
-						</p>
-<!--						<div class="in-press press-wired">-->
-<!--							<a href="#">Цифровизация – современный тренд развития и последовательного улучшения всех бизнес-процессов-->
-<!--								экономики и связанных с ней социальных сфер, основанный на увеличении скорости взаимообмена, доступности-->
-<!--								и защищенности информации, а также на возрастании роли автоматизации как базы цифровизации.</a>-->
-<!--						</div>-->
-					</div>
-<!--					<div class="col-md-4 col-sm-6">-->
-<!--						<div class="in-press press-mashable">-->
-<!--							<a href="#">Информатизация</a>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--					<div class="col-md-4 col-sm-6">-->
-<!--						<div class="in-press press-techcrunch">-->
-<!--							<a href="#">Компьютеризация</a>-->
-<!--						</div>-->
-<!--					</div>-->
+							и защищенности информации, а также на возрастании роли автоматизации как базы цифровизации.</h3></p>
+		        		</div>
+	        		</div>
 				</div>
 			</div>
 		</div>
@@ -81,29 +70,37 @@
 		<!-- Services -->
         <div class="section">
 	        <div class="container">
+				<h2>На чем базируется цифровизация?</h2>
 	        	<div class="row">
+					<div class="col-md-4 col-sm-6">
+	        			<div class="service-wrapper">
+		        			<img src="{% static 'img/service-icon/ruler.png' %}" alt="Service 2">
+		        			<h3>Информатизация</h3>
+		        			<p>Процесс внедрения электронно-вычислительной техники, обеспечивающий автоматизацию информационных
+								процессов и технологий во все сферы жизнедеятельности человека в целях улучшения качества жизни
+								людей за счет увеличения производительности и облегчения условий их труда</p>
+		        		</div>
+	        		</div>
 	        		<div class="col-md-4 col-sm-6">
 	        			<div class="service-wrapper">
 		        			<img src="{% static 'img/service-icon/diamond.png' %}" alt="Service 1">
 		        			<h3>Автоматизация</h3>
-		        			<p>Praesent rhoncus mauris ac sollicitudin vehicula. Nam fringilla turpis turpis, at posuere turpis aliquet sit amet condimentum</p>
-		        			<a href="#" class="btn">Read more</a>
+		        			<p>Направление научно-технического прогресса, использующее саморегулирующие технические средства
+								и математические методы с целью освобождения человека от участия в процессах получения, преобразования,
+								передачи и использования энергии, материалов, изделий или информации, либо существенного уменьшения степени
+								этого участия или трудоёмкости выполняемых операций.</p>
 		        		</div>
 	        		</div>
-	        		<div class="col-md-4 col-sm-6">
-	        			<div class="service-wrapper">
-		        			<img src="{% static 'img/service-icon/ruler.png' %}" alt="Service 2">
-		        			<h3>Информатизация</h3>
-		        			<p>Suspendisse eget libero mi. Fusce ligula orci, vulputate nec elit ultrices, ornare faucibus orci. Aenean lectus sapien, vehicula</p>
-		        			<a href="#" class="btn">Read more</a>
-		        		</div>
-	        		</div>
+
 	        		<div class="col-md-4 col-sm-6">
 	        			<div class="service-wrapper">
 		        			<img src="{% static 'img/service-icon/box.png' %}" alt="Service 3">
 		        			<h3>Компьютеризация</h3>
-		        			<p>Phasellus posuere et nisl ac commodo. Nulla facilisi. Sed tincidunt bibendum cursus. Aenean vulputate aliquam risus rutrum scelerisque</p>
-		        			<a href="#" class="btn">Read more</a>
+		        			<p>Организационный, социально-экономический и научно-технический процесс, обеспечивающий условия для
+								формирования и использования информационных ресурсов и реализации информационных отношений в целях
+								создания оптимальных условий для удовлетворения информационных потребностей и реализации прав граждан,
+								органов государственной власти, органов местного самоуправления, организаций, общественных объединений
+								на основе формирования и использования информационных ресурсов.</p>
 		        		</div>
 	        		</div>
 	        	</div>
@@ -125,28 +122,19 @@
 		</div>
 		<!-- End Call to Action Bar -->
 
-
-
-
-
-
 		<!-- Our Clients -->
 	    <div class="section">
 	    	<div class="container">
-	    		<h2>Our Clients</h2>
+	    		<h2>Методика применима для организаций и предприятий функциональных сфер Республики Беларусь</h2>
 				<div class="clients-logo-wrapper text-center row">
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/canon.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/cisco.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/dell.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/ea.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/ebay.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/facebook.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/google.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/hp.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/microsoft.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/mysql.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/sony.png" alt="Client Name"></a></div>
-					<div class="col-lg-1 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/yahoo.png" alt="Client Name"></a></div>
+					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Наука</div>
+					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Сельское хозяйство</div>
+					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Образование</div>
+					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Здравоохранеие</div>
+					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Нефтехимическая промышленность</div>
+					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Транспорт и коммуникации</div>
+					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Лесное хозяйство</div>
+					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Легкая промышленность</div>
 				</div>
 			</div>
 	    </div>
