--- a/set/templates/set_detail.html
+++ b/set/templates/set_detail.html
@@ -2,48 +2,58 @@
 {% load static %}
 {% block title %}Показатели{% endblock %}
 {% block 'content' %}
-
-        <div class="section section-breadcrumbs">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h1>Заполните опросный лист</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    {% if set %}
-        {% for item in set %}
-                <div class="section">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12 col-sm-6">
-                                <div class="service-wrapper">
-                                    <img src="{% static 'img/service-icon/diamond.png' %}" alt="Service Name">
-                                    <h3>{{ item }}</h3>
+      <div class="section">
+	    	<div class="container">
+	    		<div class="row">
+	    			<div class="col-md-12">
+	    				<table class="events-list">
+                                {% if interim_set %}
+                                        <tr>
+                                            <td>
+                                                <div >
+                                                    <div class="event-day castom"><b>№</b></div>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <b>Наименование показателя</b>
+                                            </td>
+                                            <td class="event-venue hidden-xs"><i class="icon-map-marker"></i>
+                                                <b>Бизнес-процесс</b>
+                                            </td>
+                                            <td class="event-price hidden-xs"><b>Значение</b></td>
+                                        </tr>
+                                    {% for indicator in interim_set.values %}
+                                        <tr>
+                                            <td>
+                                                <div class="event-date">
+                                                    <div class="event-day">{{ forloop.counter }}</div>
+                                                    <div class="event-month"><a href=""></a></div>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                {{ indicator.name }}
+                                            </td>
+                                            <td class="event-venue hidden-xs"><i class="icon-map-marker"></i>
+                                                {% if indicator.business_process %}
+                                                    {{ indicator.business_process }}
+                                                {% else %}
+                                                    Не выбран
+                                                {% endif %}
+                                            </td>
+                                            <td class="event-price hidden-xs">{{ indicator.value }}</td>
+                                            <td><a href="{% url 'calculating:questionnaire' indicator.id %}" class="btn btn-grey btn-sm event-more">Рассчитать</a></td>
+                                        </tr>
+                                    {% endfor %}
+                                {% else %}
                                     <div class="row">
-                                        <a href="{% url 'set:remove_indicator' item.id %}" class="btn">Удалить</a>
+                                        <div class="col-sm-6 col-sm-offset-1 social-login">
+                                            <p class="text-center" style="padding-left:70px">Нет выбранных показателей!</p>
+                                        </div>
                                     </div>
-
-                                    <b>{{ item.question }}</b>
-                                    <br><br>
-                                    <form action="" method="post" >
-                                        {% csrf_token %}
-                                         {% for t in item.answerchoice_set.all %}
-                                            {{ t }}
-                                            <br>
-                                            {{ form.name }}
-                                            <br>
-                                            <hr>
-                                        {% endfor %}
-                                        <input type="submit" value="Send" >
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-        {% endfor %}
-    {% endif %}
+                                {% endif %}
+	    				</table>
+	    			</div>
+	    		</div>
+			</div>
+		</div>
 {% endblock %}
