--- a/indicators/templates/main.html
+++ b/indicators/templates/main.html
@@ -10,7 +10,7 @@
 					<!-- Slide 1 -->
 					<li class="bg4">
 						<!-- Slide Title -->
-						<h2 class="title">Платформа по оценке уровня цифровизации</h2>
+						<h2 class="title">Платформа оценки уровня цифровизации</h2>
 						<!-- Slide Text -->
 						<h3 class="subtitle">Измерение на основе совокупности частных показателей автоматизации и информатизации</h3>
 						<!-- Slide Image -->
@@ -20,7 +20,7 @@
 					<!-- Slide 2 -->
 					<li class="bg3">
 						<!-- Slide Title -->
-						<h2 class="title">Платформа по оценке уровня цифровизации</h2>
+						<h2 class="title">Платформа оценки уровня цифровизации</h2>
 						<!-- Slide Text -->
 						<h3 class="subtitle">Методика разработана с учетом специфики деятельности организаций (предприятиЙ) функциональных сфер Республики Беларусь</h3>
 						<!-- Slide Image -->
@@ -30,7 +30,7 @@
 					<!-- Slide 3 -->
 					<li class="bg1">
 						<!-- Slide Title -->
-						<h2 class="title">Платформа по оценке уровня цифровизации</h2>
+						<h2 class="title">Платформа оценки уровня цифровизации</h2>
 						<!-- Slide Text -->
 						<h3 class="subtitle">Расчет с учетом существующей структуры организации(предприятия) без изменения перечня бизнес-процессов и связей между ними</h3>
 						<!-- Slide Image -->
@@ -49,52 +49,73 @@
         </div>
         <!-- End Homepage Slider -->
 
-		<!-- Press Coverage -->
-        <div class="section">
-	    	<div class="container">
-				<h2>Что мы понимаем под цифровизацией?</h2>
-				<div class="row">
-
-					<div class="col-md-12 col-sm-6">
-	        			<div class="service-wrapper">
-		        			<p><h3>Цифровизация – современный тренд развития и последовательного улучшения всех бизнес-процессов
-							экономики и связанных с ней социальных сфер, основанный на увеличении скорости взаимообмена, доступности
-							и защищенности информации, а также на возрастании роли автоматизации как базы цифровизации.</h3></p>
-		        		</div>
-	        		</div>
-				</div>
-			</div>
-		</div>
-		<!-- Press Coverage -->
-
 		<!-- Services -->
         <div class="section">
 	        <div class="container">
-				<h2>На чем базируется цифровизация?</h2>
+				<h2>Возможности платформы</h2>
 	        	<div class="row">
 					<div class="col-md-4 col-sm-6">
 	        			<div class="service-wrapper">
-		        			<img src="{% static 'img/service-icon/ruler.png' %}" alt="Service 2">
-		        			<h3>Информатизация</h3>
-							<a href="#" class="btn">Подробнее</a>
+							<img src="{% static 'img/service-icon/diamond.png' %}" alt="Service 1">
+		        			<h3>Оценка цифровизации организаций</h3>
 		        		</div>
 	        		</div>
 	        		<div class="col-md-4 col-sm-6">
 	        			<div class="service-wrapper">
-		        			<img src="{% static 'img/service-icon/diamond.png' %}" alt="Service 1">
-		        			<h3>Автоматизация</h3>
-							<a href="#" class="btn">Подробнее</a>
+							<img src="{% static 'img/service-icon/box.png' %}" alt="Service 3">
+		        			<h3>Просмотр статистических данных</h3>
 		        		</div>
 	        		</div>
 
 	        		<div class="col-md-4 col-sm-6">
 	        			<div class="service-wrapper">
-		        			<img src="{% static 'img/service-icon/box.png' %}" alt="Service 3">
-		        			<h3>Компьютеризация</h3>
-							<a href="#" class="btn">Подробнее</a>
+		        			<img src="{% static 'img/service-icon/ruler.png' %}" alt="Service 2">
+		        			<h3>Ведение личного кабинета представителей</h3>
 		        		</div>
 	        		</div>
 	        	</div>
+
+				<h2>Как пользоваться платформой?</h2>
+				<div class="section">
+							<div class="container">
+								<div class="row">
+									<div class="col-md-12">
+										<div class="pricing-wrapper">
+											<div class="pricing-plan">
+												<h2 class="pricing-plan-title">Шаг 1</h2>
+												<img class="img-step" src="{% static 'img/service-icon/check.png' %}" alt="Service 2">
+												<ul class="pricing-plan-features">
+													<li><strong>Выбрать показатели характеризующие вид деятельности</strong></li>
+												</ul>
+											</div>
+											<div class="pricing-plan">
+												<h2 class="pricing-plan-title">Шаг 2</h2>
+												<img class="img-step" src="{% static 'img/service-icon/clipboard.png' %}" alt="Service 2">
+												<ul class="pricing-plan-features">
+													<li><strong>Перейти к списку выбранных показателей</strong></li>
+												</ul>
+											</div>
+											<div class="pricing-plan">
+													<h2 class="pricing-plan-title">Шаг 3</h2>
+													<img class="img-step" src="{% static 'img/service-icon/compose.png' %}" alt="Service 2">
+													<ul class="pricing-plan-features">
+														<li><strong>Заполнить опросные листы</strong></li>
+														<br>
+													</ul>
+											</div>
+											<div class="pricing-plan">
+												<h2 class="pricing-plan-title">Шаг 4</h2>
+													<img class="img-step" src="{% static 'img/service-icon/memorycard.png' %}" alt="Service 2">
+												<ul class="pricing-plan-features">
+													<li><strong> Сохранить результат</strong></li>
+													<br>
+												</ul>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+				</div>
 	        </div>
 	    </div>
 	    <!-- End Services -->
@@ -116,7 +137,7 @@
 		<!-- Our Clients -->
 	    <div class="section">
 	    	<div class="container">
-	    		<h2>Методика применима для организаций и предприятий функциональных сфер Республики Беларусь</h2>
+	    		<h2>Платформа применима для организаций и предприятий функциональных сфер Республики Беларусь</h2>
 				<div class="clients-logo-wrapper text-center row">
 					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Образование и наука</div>
 					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Сельское хозяйство</div>
