--- a/set/templates/set_detail.html
+++ b/set/templates/set_detail.html
@@ -41,7 +41,7 @@
                                                 {% endif %}
                                             </td>
                                             <td class="event-price hidden-xs">{{ indicator.value }}</td>
-                                            <td><a href="{% url 'calculating:questionnaire' indicator.id %}" class="btn btn-grey btn-sm event-more">Рассчитать</a></td>
+                                            <td><a href="{% url 'calculating:questionnaire' indicator.id %}" class="btn btn-grey btn-sm event-more">Опросный лист</a></td>
                                         </tr>
                                     {% endfor %}
                                 {% else %}
