--- a/indicators/templates/main.html
+++ b/indicators/templates/main.html
@@ -10,31 +10,25 @@
 					<!-- Slide 1 -->
 					<li class="bg4">
 						<!-- Slide Title -->
-						<h2 class="title">Платформа оценки уровня цифровизации</h2>
-						<!-- Slide Text -->
-						<h3 class="subtitle">Измерение на основе совокупности частных показателей автоматизации и информатизации</h3>
-						<!-- Slide Image -->
-<!--						<img class="slide-img" src="{% static 'img/homepage-slider/slide1.jpg' %}" alt="Slide 1" />-->
+<!--						<h2 class="title">Платформа оценки уровня цифровизации</h2>-->
+<!--						&lt;!&ndash; Slide Text &ndash;&gt;-->
+<!--						<h3 class="subtitle">Измерение на основе совокупности частных показателей автоматизации и информатизации</h3>-->
 					</li>
 					<!-- End Slide 1 -->
 					<!-- Slide 2 -->
 					<li class="bg3">
 						<!-- Slide Title -->
-						<h2 class="title">Платформа оценки уровня цифровизации</h2>
+<!--						<h2 class="title">Платформа оценки уровня цифровизации</h2>-->
 						<!-- Slide Text -->
-						<h3 class="subtitle">Методика разработана с учетом специфики деятельности организаций (предприятиЙ) функциональных сфер Республики Беларусь</h3>
-						<!-- Slide Image -->
-<!--						<img class="slide-img" src="{% static 'img/homepage-slider/slide2.jpg' %}" alt="Slide 2" />-->
+<!--						<h3 class="subtitle">Методика разработана с учетом специфики деятельности организаций (предприятиЙ) функциональных сфер Республики Беларусь</h3>-->
 					</li>
 					<!-- End Slide 2 -->
 					<!-- Slide 3 -->
 					<li class="bg1">
 						<!-- Slide Title -->
-						<h2 class="title">Платформа оценки уровня цифровизации</h2>
+<!--						<h2 class="title">Платформа оценки уровня цифровизации</h2>-->
 						<!-- Slide Text -->
-						<h3 class="subtitle">Расчет с учетом существующей структуры организации(предприятия) без изменения перечня бизнес-процессов и связей между ними</h3>
-						<!-- Slide Image -->
-<!--						<img class="slide-img" src="{% static 'img/homepage-slider/slide3.jpg' %}" alt="Slide 3" />-->
+<!--						<h3 class="subtitle">Расчет с учетом существующей структуры организации(предприятия) без изменения перечня бизнес-процессов и связей между ними</h3>-->
 					</li>
 					<!-- End Slide 3 -->
 				</ul>
@@ -48,6 +42,33 @@
 			</div>
         </div>
         <!-- End Homepage Slider -->
+			<div class="section">
+				<div class="container">
+					<h2>Платформа оценки уровня цифровизации</h2>
+					<div class="row">
+						<!-- Image Column -->
+						<div class="col-sm-5">
+							<div class="portfolio-item">
+								<div class="portfolio-image">
+									<a href="#"><img src="{% static 'img/service-icon/95.gif' %}" alt="Project Name"></a>
+								</div>
+							</div>
+						</div>
+						<!-- End Image Column -->
+						<!-- Project Info Column -->
+						<div class="portfolio-item-description col-sm-6">
+							<p><h4>Платформа позволяет оценить уровень цифровизации как отдельного предприятия (организации), так  и отрасли в целом.</h4></p>
+							<p><h4>Измерение на основе совокупности частных показателей автоматизации и информатизации</h4></p>
+							<p><h4>Расчет с учетом существующей структуры организации(предприятия) без изменения перечня бизнес-процессов и связей между ними</h4></p>
+							<p><h4>Методика оценки разработана с учетом специфики деятельности организаций (предприятиЙ) функциональных сфер Республики Беларусь</h4></p>
+						</div>
+						<!-- End Project Info Column -->
+					</div>
+					</div>
+			</div>
+
+
+
 
 		<!-- Services -->
         <div class="section">
@@ -55,20 +76,20 @@
 				<h2>Возможности платформы</h2>
 	        	<div class="row">
 					<div class="col-md-4 col-sm-6">
-	        			<div class="service-wrapper">
+	        			<div class="service-wrapper opportunity">
 							<img src="{% static 'img/service-icon/diamond.png' %}" alt="Service 1">
 		        			<h3>Оценка цифровизации организаций</h3>
 		        		</div>
 	        		</div>
 	        		<div class="col-md-4 col-sm-6">
-	        			<div class="service-wrapper">
+	        			<div class="service-wrapper opportunity">
 							<img src="{% static 'img/service-icon/box.png' %}" alt="Service 3">
 		        			<h3>Просмотр статистических данных</h3>
 		        		</div>
 	        		</div>
 
 	        		<div class="col-md-4 col-sm-6">
-	        			<div class="service-wrapper">
+	        			<div class="service-wrapper opportunity">
 		        			<img src="{% static 'img/service-icon/ruler.png' %}" alt="Service 2">
 		        			<h3>Ведение личного кабинета представителей</h3>
 		        		</div>
@@ -137,7 +158,7 @@
 		<!-- Our Clients -->
 	    <div class="section">
 	    	<div class="container">
-	    		<h2>Платформа применима для организаций и предприятий функциональных сфер Республики Беларусь</h2>
+	    		<h2>Платформа применима для организаций/предприятий отраслей и функциональных сфер Республики Беларусь</h2>
 				<div class="clients-logo-wrapper text-center row">
 					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Образование и наука</div>
 					<div class="col-lg-2 col-md-1 col-sm-3 col-xs-6">Сельское хозяйство</div>
