--- a/static/css/main.css
+++ b/static/css/main.css
@@ -110,7 +110,7 @@ a:hover {
 .service-wrapper {
   background: #FFF;
   margin: 20px 10px;
-  text-align: center;
+  /*text-align: center;*/
   padding: 30px 20px;
   -webkit-border-radius: 5px;
   -webkit-background-clip: padding-box;
