--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/icomoon-social.css' %}">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,800' rel='stylesheet' type='text/css'>
-
+		{% block style %}{% endblock %}
         <link rel="stylesheet" href="{% static 'css/leaflet.css' %}" />
 		<!--[if lte IE 8]>
 		    <link rel="stylesheet" href="{% static 'css/leaflet.ie.css' %}" />
